fix: More spacing between locales of a field

--- a/src/stylesheets/modules/entity_editor/field.styl
+++ b/src/stylesheets/modules/entity_editor/field.styl
@@ -97,7 +97,7 @@ $entity-editor__field-width = 80%
     border-left-color: $colors.red-mid
 
 .entity-editor__field-locale
-  margin-top: 18px
+  margin-top: 28px
   &:first-child
     margin-top: 0
 
